WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140616
[GTK] Cannot compile 2.7.3 on PowerPC machines
https://bugs.webkit.org/show_bug.cgi?id=140616
Summary
[GTK] Cannot compile 2.7.3 on PowerPC machines
Tomas Popela
Reported
2015-01-19 04:31:31 PST
Compiling GTK port with -DENABLE_JIT=OFF -DENABLE_LLINT_C_LOOP=ON and with -DENABLE_YARR_JIT=0 ends with: /builddir/build/BUILD/webkitgtk-2.7.3/Source/JavaScriptCore/runtime/BasicBlockLocation.cpp: In member function 'WTF::Vector<std::pair<int, int> > JSC::BasicBlockLocation::getExecutedRanges() const': /builddir/build/BUILD/webkitgtk-2.7.3/Source/JavaScriptCore/runtime/BasicBlockLocation.cpp:54:20: error: 'INT_MAX' was not declared in this scope Gap minGap(INT_MAX, 0); ^ /builddir/build/BUILD/webkitgtk-2.7.3/Source/JavaScriptCore/runtime/BasicBlockLocation.cpp: In member function 'void JSC::BasicBlockLocation::dumpData() const': /builddir/build/BUILD/webkitgtk-2.7.3/Source/JavaScriptCore/runtime/BasicBlockLocation.cpp:76:117: error: 'dataLogF' was not declared in this scope dataLogF("\tBasicBlock: [%d, %d] hasExecuted: %s\n", gap.first, gap.second, hasExecuted() ? "true" : "false"); It also applies for trunk.
Attachments
Patch
(1.24 KB, patch)
2015-01-19 04:34 PST
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
Patch
(1.25 KB, patch)
2015-01-19 04:41 PST
,
Tomas Popela
ossy
: review+
ossy
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2015-01-19 04:34:14 PST
Created
attachment 244896
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-19 04:36:00 PST
Attachment 244896
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tomas Popela
Comment 3
2015-01-19 04:41:58 PST
Created
attachment 244897
[details]
Patch
Alberto Garcia
Comment 4
2015-01-19 05:10:57 PST
lgtm, thanks
Csaba Osztrogonác
Comment 5
2015-01-20 05:55:07 PST
Comment on
attachment 244897
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=244897&action=review
> Source/JavaScriptCore/runtime/BasicBlockLocation.cpp:34 > #include "CCallHelpers.h" > > +#include <climits> > + > +#include <wtf/DataLog.h>
LGTM, but please remove the blank lines before landing.
Csaba Osztrogonác
Comment 6
2015-01-20 05:56:10 PST
Comment on
attachment 244897
[details]
Patch #include "config.h" #include "BasicBlockLocation.h" #include "CCallHelpers.h" #include <climits> #include <wtf/DataLog.h>
Carlos Garcia Campos
Comment 7
2015-01-20 06:01:36 PST
Committed
r178708
: <
http://trac.webkit.org/changeset/178708
>
Michael Catanzaro
Comment 8
2015-09-04 08:41:36 PDT
***
Bug 142511
has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 9
2015-09-04 08:41:40 PDT
***
Bug 139588
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug