[GTK] Cannot compile 2.7.3 on PowerPC machines https://bugs.webkit.org/show_bug.cgi?id=140616

Include climits for INT_MAX and wtf/DataLog.h for dataLogF

Patch by Tomas Popela <tpopela@redhat.com> on 2015-01-20
Reviewed by Csaba Osztrogonác.

* runtime/BasicBlockLocation.cpp:

Canonical link: https://commits.webkit.org/158637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178708 268f45cc-cd09-0410-ab3c-d52691b4dbfc